# internal/platform/httpserver/middleware.go
@@ -77,7 +77,7 @@ func CORS(origin string) Middleware {
 			w.Header().Set("Access-Control-Allow-Origin", origin)
 			w.Header().Set("Access-Control-Allow-Headers", "Content-Type, X-Request-ID")
 			w.Header().Set("Access-Control-Allow-Methods", "GET, POST, PATCH, OPTIONS")
-			w.Header().Set("Access-Control-Expose-Headers", "X-Request-ID, Server-Timing")
+			w.Header().Set("Access-Control-Expose-Headers", "X-Request-ID, X-Trace-Id, Server-Timing")
 			w.Header().Set("Timing-Allow-Origin", origin)
 			if r.Method == http.MethodOptions {
 				w.WriteHeader(http.StatusNoContent)
